--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "firebase": "^7.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-quill": "^1.3.3",
     "react-scripts": "3.2.0"
   },
   "scripts": {
