--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "evernote-clone",
+  "name": "recipe-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
-    "firebase": "^7.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-quill": "^1.3.3",
     "react-scripts": "3.2.0"
   },
   "scripts": {
